--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Calm</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+    <link rel="stylesheet" type="text/html" href="./css/main.min.css" />
   </head>
   <body>
     <h1 class="title">Webpack</h1>
+    <p>sfsdfsdfsd</p>
     <div id="app"></div>
-    <script src="./index.js"></script>
+    <script type="text/html" src="./index.js"></script>
   </body>
 </html>
