--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calm</title>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" type="text/html" href="./css/main.min.css" />
   </head>
   <body>
-    <h1 class="title">Webpack</h1>
-    <p>sfsdfsdfsd</p>
-    <div id="app"></div>
+    <header class="header">
+      <div class="header-container">
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./images/LogoCalm.svg" alt="logo" />
+          </a>
+        </div>
+        <button class="burger-menu">
+          <svg width="32" height="32">
+            <use href="./images/icons.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
+
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-container">
+          <div>
+            <img src="./images/LogoCalm.svg" alt="logo" class="hero-logo" />
+          </div>
+          <h1 class="hero-title">
+            Welcome to Calm - a lifestyle blog about minimalism, technology,
+            design & travel.
+          </h1>
+        </div>
+      </section>
+      <!-- ABOUT -->
+      <section class="about">
+        <div class="about-container">
+          <div class="about-card-img">
+            <img src="./images/mob_320/mountains_280.png" alt="Mountains" />
+            <p class="type-card">Travel</p>
+            <h2 hidden></h2>
+            <h3 class="card-title">Travel spots in Iceland</h3>
+            <p class="card-description">
+              Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
+              esse temporibus et. Aut atque vel labore officiis a dolor et.
+              Molestiae dolor quo eius. Perferendis error eveniet sit quia
+              occaecati excepturi nisi prod.
+            </p>
+            <p class="date">November 24, 2021</p>
+          </div>
+
+          <article class="article-card">
+            <img src="./images/mob_320/climbing_243.png" alt="Climbing" />
+            <div class="card-box">
+              <p class="type-card-p">Exercise</p>
+              <h4 class="card-title-artcl">Climbing as exercise</h4>
+              <p class="date-p">November 24, 2021</p>
+            </div>
+          </article>
+          <article class="article-card">
+            <img src="./images/mob_320/cameras_243.png" alt="Camera" />
+            <div class="card-box">
+              <p class="type-card-p">Tech</p>
+              <h4 class="card-title-artcl">The move to mirrorless cameras</h4>
+              <p class="date-p">November 24, 2021</p>
+            </div>
+          </article>
+
+          <div class="about-card-img">
+            <img src="./images/mob_320/drone_280.png" alt="Drone" />
+            <p class="type-card-p">Tech</p>
+            <h4 class="card-title-artcl">
+              Drone photography on a space budget
+            </h4>
+            <p class="date-p">November 24, 2021</p>
+          </div>
+
+          <div class="about-card-img">
+            <img src="./images/mob_320/coffe_280.png" alt="Cofee" />
+            <p class="type-card-p">Tutorial</p>
+            <h4 class="card-title-artcl">
+              How to make the perfect cup of coffee
+            </h4>
+            <p class="date-p">November 24, 2021</p>
+          </div>
+
+          <div class="slider">
+          <article class="article-card-slider">
+            <img src="./images/mob_320/pen_243.png" alt="Camera" />
+            <div class="card-box">
+              <p class="type-card-p">Review</p>
+              <h4 class="card-title-artcl-sl">The best pen I've ever used</h4>
+              <p class="date-p">November 24, 2021</p>
+            </div>
+          </article>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- <div id="app"></div> -->
     <script type="text/html" src="./index.js"></script>
   </body>
 </html>
