--- a/src/index.html
+++ b/src/index.html
@@ -95,16 +95,41 @@
           </div>
 
           <div class="slider">
-          <article class="article-card-slider">
-            <img src="./images/mob_320/pen_243.png" alt="Camera" />
-            <div class="card-box">
-              <p class="type-card-p">Review</p>
-              <h4 class="card-title-artcl-sl">The best pen I've ever used</h4>
-              <p class="date-p">November 24, 2021</p>
-            </div>
-          </article>
+            <article class="article-card-slider">
+              <img src="./images/mob_320/pen_243.png" alt="Camera" />
+              <div class="card-box">
+                <p class="type-card-p">Review</p>
+                <h4 class="card-title-artcl-sl">The best pen I've ever used</h4>
+                <p class="date-p">November 24, 2021</p>
+              </div>
+            </article>
           </div>
         </div>
+      </section>
+
+      <section class="subscription">
+        <p class="subtitle-subscr"><b>Stay in the know.</b></p>
+        <p class="text-subscr">
+          Sign-up to my newsletter to get an update whenever I post a new
+          article. I try to be very mindful of not spamming my subscribers.
+        </p>
+        <form class="subscr-form">
+          <label class="data-field">
+            <input type="text" name="name" class="data-input" placeholder=" " />
+            <span class="data-text">Name</span>
+          </label>
+
+          <label class="data-field">
+            <input
+              type="email"
+              name="email"
+              class="data-input"
+              placeholder=" "
+            />
+            <span class="data-text">Email Address</span>
+          </label>
+        </form>
+        <button class="btn-subscr" type="button">Send</button>
       </section>
     </main>
     <!-- <div id="app"></div> -->
