add libs simpleLightBox, sass, swiper. Transferred the logic burgerMenu.js, loadMore.js. Add logic of library operation SimpleLightBox.

--- a/src/index.html
+++ b/src/index.html
@@ -75,13 +75,16 @@
       </section>
       <!-- ABOUT -->
       <section class="about">
+        <!-- SimpleLightBox -->
+        <ul class="gallery hidden"></ul>
+
         <div class="about-container">
           <article class="about-card-img">
-            <img
-              srcset="./images/mob_320/mountains@2_280.png 2x"
-              src="./images/mob_320/mountains_280.png"
-              alt="Mountains"
-            />
+            <a href="" class="link">
+              <img srcset="./images/mob_320/mountains@2_280.png 2x"
+              src="./images/mob_320/mountains_280.png" alt="Mountains"
+            </a>
+
             <p class="type-card">Travel</p>
             <h2 hidden></h2>
             <h3 class="card-title">Travel spots in Iceland</h3>
