add images in mountains in simplelightbox

--- a/src/index.html
+++ b/src/index.html
@@ -97,13 +97,17 @@
             <p class="date">November 24, 2021</p>
           </article>
 
+          <ul class="galleryCl hidden"></ul>
           <article class="article-card">
-            <img
-              srcset="./images/mob_320/climbing@2_243.png 2x"
-              sizes="(max-width: 320px) 243px, 100vw"
-              src="./images/mob_320/climbing_243.png"
-              alt="Climbing"
-            />
+            <a href="" class="linkCl">
+              <img
+                srcset="./images/mob_320/climbing@2_243.png 2x"
+                sizes="(max-width: 320px) 243px, 100vw"
+                src="./images/mob_320/climbing_243.png"
+                alt="Climbing"
+              />
+            </a>
+
             <div class="card-box">
               <p class="type-card-p">Exercise</p>
               <h4 class="card-title-artcl">Climbing as exercise</h4>
