add images drone, coffee for simpleLightBox

--- a/src/index.html
+++ b/src/index.html
@@ -107,20 +107,23 @@
                 alt="Climbing"
               />
             </a>
-
             <div class="card-box">
               <p class="type-card-p">Exercise</p>
               <h4 class="card-title-artcl">Climbing as exercise</h4>
               <p class="date-p">November 24, 2021</p>
             </div>
           </article>
+
+          <ul class="galleryCamera hidden"></ul>
           <article class="article-card">
-            <img
-              srcset="./images/mob_320/cameras@2_243.png 2x"
-              sizes="(max-width: 320px) 243px, 100vw"
-              src="./images/mob_320/cameras_243.png"
-              alt="Camera"
-            />
+            <a href="" class="linkCamera">
+              <img
+                srcset="./images/mob_320/cameras@2_243.png 2x"
+                sizes="(max-width: 320px) 243px, 100vw"
+                src="./images/mob_320/cameras_243.png"
+                alt="Camera"
+              />
+            </a>
             <div class="card-box">
               <p class="type-card-p">Tech</p>
               <h4 class="card-title-artcl">The move to mirrorless cameras</h4>
@@ -128,13 +131,17 @@
             </div>
           </article>
 
+          <ul class="galleryDrone hidden"></ul>
           <article class="about-card-img">
-            <img
-              srcset="./images/mob_320/drone@2_280.png 2x"
-              sizes="(max-width: 320px) 280px, 100vw"
-              src="./images/mob_320/drone_280.png"
-              alt="Drone"
-            />
+            <a href="" class="linkDrone">
+              <img
+                srcset="./images/mob_320/drone@2_280.png 2x"
+                sizes="(max-width: 320px) 280px, 100vw"
+                src="./images/mob_320/drone_280.png"
+                alt="Drone"
+              />
+            </a>
+
             <p class="type-card-p">Tech</p>
             <h4 class="card-title-artcl">
               Drone photography on a space budget
@@ -142,13 +149,17 @@
             <p class="date-p">November 24, 2021</p>
           </article>
 
+          <ul class="galleryCoffee hidden"></ul>
           <article class="about-card-img">
-            <img
-              srcset="./images/mob_320/coffe@2_280.png 2x"
-              sizes="(max-width: 320px) 280px, 100vw"
-              src="./images/mob_320/coffe_280.png"
-              alt="Cofee"
-            />
+            <a href="" class="linkCoffee">
+              <img
+                srcset="./images/mob_320/coffe@2_280.png 2x"
+                sizes="(max-width: 320px) 280px, 100vw"
+                src="./images/mob_320/coffe_280.png"
+                alt="Cofee"
+              />
+            </a>
+
             <p class="type-card-p">Tutorial</p>
             <h4 class="card-title-artcl">
               How to make the perfect cup of coffee
