--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
                 <p class="card-description">
                   Delectus sint nisi ut recusandae molestiae. Qui iure
                   accusantium esse temporibus et. Aut atque vel labore officiis
-                  a dolor et. Molestiae dolor quo eius. Perferendis \error
+                  a dolor et. Molestiae dolor quo eius. Perferendis error
                   eveniet sit quia occaecati excepturi nisi prod.
                 </p>
                 <p class="date-a">November 24, 2021</p>
