--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
             <p class="card-description">
               Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
               esse temporibus et. Aut atque vel labore officiis a dolor et.
-              Molestiae dolor quo eius. Perferendis error eveniet sit quia
-              occaecati excepturi nisi prod.
+              Molestiae dolor quo eius. Perferendis &#101;rror eveniet sit quia occaecati
+              excepturi nisi prod.
             </p>
             <p class="date">November 24, 2021</p>
           </article>
