--- a/src/index.html
+++ b/src/index.html
@@ -81,8 +81,11 @@
         <div class="about-container">
           <article class="about-card-img">
             <a href="" class="link">
-              <img srcset="./images/mob_320/mountains@2_280.png 2x"
-              src="./images/mob_320/mountains_280.png" alt="Mountains"
+              <img
+                srcset="./images/mob_320/mountains@2_280.png 2x"
+                src="./images/mob_320/mountains_280.png"
+                alt="Mountains"
+              />
             </a>
 
             <p class="type-card">Travel</p>
@@ -91,8 +94,8 @@
             <p class="card-description">
               Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
               esse temporibus et. Aut atque vel labore officiis a dolor et.
-              Molestiae dolor quo eius. Perferendis &#101;rror eveniet sit quia occaecati
-              excepturi nisi prod.
+              Molestiae dolor quo eius. Perferendis &#101;rror eveniet sit quia
+              occaecati excepturi nisi prod.
             </p>
             <p class="date">November 24, 2021</p>
           </article>
