--- a/src/index.html
+++ b/src/index.html
@@ -170,20 +170,35 @@
             <p class="date-p">November 24, 2021</p>
           </article>
 
-          <div class="slider">
-            <article class="article-card-slider">
-              <img
-                srcset="./images/mob_320/pen@2_243.png 2x"
-                sizes="(max-width: 320px) 280px, 100vw"
-                src="./images/mob_320/pen_243.png"
-                alt="Camera"
-              />
-              <div class="card-box">
-                <p class="type-card-p">Review</p>
-                <h4 class="card-title-artcl-sl">The best pen I've ever used</h4>
-                <p class="date-p">November 24, 2021</p>
+          <div class="swiper slider">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <article class="article-card-slider">
+                  <img
+                    srcset="./images/mob_320/pen@2_243.png 2x"
+                    sizes="(max-width: 320px) 280px, 100vw"
+                    src="./images/mob_320/pen_243.png"
+                    alt="Camera"
+                  />
+                  <div class="card-box">
+                    <p class="type-card-p">Review</p>
+                    <h4 class="card-title-artcl-sl">
+                      The best pen I've ever used
+                    </h4>
+                    <p class="date-p">November 24, 2021</p>
+                  </div>
+                </article>
               </div>
-            </article>
+              <div class="swiper-slide">
+                <article>1</article>
+              </div>
+              <div class="swiper-slide">
+                <article>2</article>
+              </div>
+              <div class="swiper-slide">
+                <article>3</article>
+              </div>
+            </div>
           </div>
         </div>
       </section>
