--- a/src/index.html
+++ b/src/index.html
@@ -175,9 +175,9 @@
               <div class="swiper-slide">
                 <article class="article-card-slider">
                   <img
-                    srcset="./images/mob_320/pen@2_243.png 2x"
+                    srcset="./images/slider_mob/pen@2_243.png 2x"
                     sizes="(max-width: 320px) 280px, 100vw"
-                    src="./images/mob_320/pen_243.png"
+                    src="./images/slider_mob/pen_243.png"
                     alt="Camera"
                   />
                   <div class="card-box">
@@ -190,13 +190,38 @@
                 </article>
               </div>
               <div class="swiper-slide">
-                <article>1</article>
+                <article class="article-card-slider">
+                  <img
+                    srcset="./images/slider_mob/man_field@2_243.png 2x"
+                    sizes="(max-width: 320px) 280px, 100vw"
+                    src="./images/slider_mob/man_field_243.png"
+                    alt="Man field"
+                  />
+                  <div class="card-box">
+                    <p class="type-card-p">Review</p>
+                    <h4 class="card-title-artcl-sl">
+                      Tech-focused travel backpack
+                    </h4>
+                    <p class="date-p">November 24, 2021</p>
+                  </div>
+                </article>
               </div>
               <div class="swiper-slide">
-                <article>2</article>
-              </div>
-              <div class="swiper-slide">
-                <article>3</article>
+                <article class="article-card-slider">
+                  <img
+                    srcset="./images/slider_mob/displya@2_243.png 2x"
+                    sizes="(max-width: 320px) 280px, 100vw"
+                    src="./images/slider_mob/displya_243.png"
+                    alt="Man field"
+                  />
+                  <div class="card-box">
+                    <p class="type-card-p">Review</p>
+                    <h4 class="card-title-artcl-sl">
+                      Desk accessories to keep you organized
+                    </h4>
+                    <p class="date-p">November 24, 2021</p>
+                  </div>
+                </article>
               </div>
             </div>
           </div>
