add test react-slider

--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,8 @@
             </h4>
             <p class="date-p">November 24, 2021</p>
           </article>
-
+          <!-- REACT -->
+          <div id="app"></div>
           <div class="swiper slider">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
