--- a/src/index.html
+++ b/src/index.html
@@ -89,16 +89,8 @@
           <article class="about-card-img">
             <a href="" class="link">
               <img
-                srcset="
-                  ./images/mob_320/mountains_280.png       280w,
-                  ./images/mob_320/mountains@2_280.png     560w,
-                  ./images/tablet_768/mountains_505.png    505w,
-                  ./images/tablet_768/mountains@2_505.png 1010w,
-                  ./images/desk_1440/mountains_507.png     507w,
-                  ./images/desk_1440/mountains@2_507.png  1014w
-                "
-                sizes="(min-width: 1440px) 507px, (min-width: 768px) 505px, (min-width: 320px) 280px, 100vw"
-                src="./images/mob_320/mountains_280.png"
+                srcset="./images/desk_1440/mountains@2_507.png 2x"
+                src="./images/desk_1440/mountains_507.png"
                 alt="Mountains"
               />
             </a>
