--- a/src/index.html
+++ b/src/index.html
@@ -94,52 +94,61 @@
                 alt="Mountains"
               />
             </a>
-
-            <p class="type-card">Travel</p>
-            <h2 hidden></h2>
-            <h3 class="card-title">Travel spots in Iceland</h3>
-            <p class="card-description">
-              Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
-              esse temporibus et. Aut atque vel labore officiis a dolor et.
-              Molestiae dolor quo eius. Perferendis &#101;rror eveniet sit quia
-              occaecati excepturi nisi prod.
-            </p>
-            <p class="date">November 24, 2021</p>
-          </article>
-
-          <ul class="galleryCl hidden"></ul>
-          <article class="article-card">
-            <a href="" class="linkCl">
-              <img
-                srcset="./images/mob_320/climbing@2_243.png 2x"
-                sizes="(max-width: 320px) 243px, 100vw"
-                src="./images/mob_320/climbing_243.png"
-                alt="Climbing"
-              />
-            </a>
-            <div class="card-box">
-              <p class="type-card-p">Exercise</p>
-              <h4 class="card-title-artcl">Climbing as exercise</h4>
-              <p class="date-p">November 24, 2021</p>
+            <div class="about-card-text">
+              <p class="type-card">Travel</p>
+              <h2 hidden></h2>
+              <h3 class="card-title">Travel spots in Iceland</h3>
+              <p class="card-description">
+                Delectus sint nisi ut recusandae molestiae. Qui iure accusantium
+                esse temporibus et. Aut atque vel labore officiis a dolor et.
+                Molestiae dolor quo eius. Perferendis &#101;rror eveniet sit
+                quia occaecati excepturi nisi prod.
+              </p>
+              <p class="date">November 24, 2021</p>
             </div>
           </article>
 
-          <ul class="galleryCamera hidden"></ul>
-          <article class="article-card">
-            <a href="" class="linkCamera">
-              <img
-                srcset="./images/mob_320/cameras@2_243.png 2x"
-                sizes="(max-width: 320px) 243px, 100vw"
-                src="./images/mob_320/cameras_243.png"
-                alt="Camera"
-              />
-            </a>
-            <div class="card-box">
-              <p class="type-card-p">Tech</p>
-              <h4 class="card-title-artcl">The move to mirrorless cameras</h4>
-              <p class="date-p">November 24, 2021</p>
-            </div>
-          </article>
+          <ul class="about-box">
+            <li class="article-list">
+              <ul class="galleryCl hidden"></ul>
+              <article class="article-card">
+                <a href="" class="linkCl">
+                  <img
+                    srcset="./images/mob_320/climbing@2_243.png 2x"
+                    sizes="(max-width: 320px) 243px, 100vw"
+                    src="./images/mob_320/climbing_243.png"
+                    alt="Climbing"
+                  />
+                </a>
+                <div class="card-box">
+                  <p class="type-card-p">Exercise</p>
+                  <h4 class="card-title-artcl">Climbing as exercise</h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </li>
+
+            <li class="article-list">
+              <ul class="galleryCamera hidden"></ul>
+              <article class="article-card">
+                <a href="" class="linkCamera">
+                  <img
+                    srcset="./images/mob_320/cameras@2_243.png 2x"
+                    sizes="(max-width: 320px) 243px, 100vw"
+                    src="./images/mob_320/cameras_243.png"
+                    alt="Camera"
+                  />
+                </a>
+                <div class="card-box">
+                  <p class="type-card-p">Tech</p>
+                  <h4 class="card-title-artcl">
+                    The move to mirrorless cameras
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </li>
+          </ul>
 
           <ul class="galleryDrone hidden"></ul>
           <article class="about-card-img">
