add styles for tablet

--- a/src/index.html
+++ b/src/index.html
@@ -149,97 +149,100 @@
               </article>
             </li>
           </ul>
+        </div>
 
-          <ul class="galleryDrone hidden"></ul>
-          <article class="about-card-img">
-            <a href="" class="linkDrone">
-              <img
-                srcset="./images/mob_320/drone@2_280.png 2x"
-                sizes="(max-width: 320px) 280px, 100vw"
-                src="./images/mob_320/drone_280.png"
-                alt="Drone"
-              />
-            </a>
+        <ul class="galleryDrone hidden"></ul>
+        <article class="about-card-img about-card-img-line">
+          <a href="" class="linkDrone">
+            <img
+              srcset="./images/tablet_768/drone@2_374.png 2x"
+              src="./images/tablet_768/drone_374.png"
+              alt="Drone"
+            />
+          </a>
 
+          <div class="card-box-line">
             <p class="type-card-p">Tech</p>
-            <h4 class="card-title-artcl">
+            <h4 class="card-title-artcl card-title-artcl-line">
               Drone photography on a space budget
             </h4>
             <p class="date-p">November 24, 2021</p>
-          </article>
+          </div>
+        </article>
 
-          <ul class="galleryCoffee hidden"></ul>
-          <article class="about-card-img">
-            <a href="" class="linkCoffee">
-              <img
-                srcset="./images/mob_320/coffe@2_280.png 2x"
-                sizes="(max-width: 320px) 280px, 100vw"
-                src="./images/mob_320/coffe_280.png"
-                alt="Cofee"
-              />
-            </a>
+        <ul class="galleryCoffee hidden"></ul>
+        <article class="about-card-img about-card-img-line revers">
+          <a href="" class="linkCoffee">
+            <img
+              srcset="./images/tablet_768/coffe@2_374.png 2x"
+              sizes="(max-width: 320px) 280px, 100vw"
+              src="./images/tablet_768/coffe_374.png"
+              alt="Coffee"
+            />
+          </a>
 
-            <p class="type-card-p">Tutorial</p>
-            <h4 class="card-title-artcl">
+          <div class="card-box-line">
+            <p class="type-card-p type-card-p-revers">Tutorial</p>
+            <h4 class="card-title-artcl card-title-artcl-revers card-title-artcl-line">
               How to make the perfect cup of coffee
             </h4>
-            <p class="date-p">November 24, 2021</p>
-          </article>
-          <div class="swiper slider">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <article class="article-card-slider">
-                  <img
-                    srcset="./images/slider_mob/pen@2_243.png 2x"
-                    sizes="(max-width: 320px) 280px, 100vw"
-                    src="./images/slider_mob/pen_243.png"
-                    alt="Camera"
-                  />
-                  <div class="card-box">
-                    <p class="type-card-p">Review</p>
-                    <h4 class="card-title-artcl-sl">
-                      The best pen I've ever used
-                    </h4>
-                    <p class="date-p">November 24, 2021</p>
-                  </div>
-                </article>
-              </div>
-              <div class="swiper-slide">
-                <article class="article-card-slider">
-                  <img
-                    srcset="./images/slider_mob/man_field@2_243.png 2x"
-                    sizes="(max-width: 320px) 280px, 100vw"
-                    src="./images/slider_mob/man_field_243.png"
-                    alt="Man field"
-                  />
-                  <div class="card-box">
-                    <p class="type-card-p">Review</p>
-                    <h4 class="card-title-artcl-sl">
-                      Tech-focused travel backpack
-                    </h4>
-                    <p class="date-p">November 24, 2021</p>
-                  </div>
-                </article>
-              </div>
-              <div class="swiper-slide">
-                <article class="article-card-slider">
-                  <img
-                    srcset="./images/slider_mob/displya@2_243.png 2x"
-                    sizes="(max-width: 320px) 280px, 100vw"
-                    src="./images/slider_mob/displya_243.png"
-                    alt="Man field"
-                  />
-                  <div class="card-box">
-                    <p class="type-card-p">Review</p>
-                    <h4 class="card-title-artcl-sl">
-                      Desk accessories to keep you organized
-                    </h4>
-                    <p class="date-p">November 24, 2021</p>
-                  </div>
-                </article>
-              </div>
-              <div class="swiper-cube-shadow1"></div>
+            <p class="date-p date-p-revers">November 24, 2021</p>
+          </div>
+        </article>
+        <div class="swiper slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <article class="article-card-slider">
+                <img
+                  srcset="./images/slider_mob/pen@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/pen_243.png"
+                  alt="Camera"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    The best pen I've ever used
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
             </div>
+            <div class="swiper-slide">
+              <article class="article-card-slider">
+                <img
+                  srcset="./images/slider_mob/man_field@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/man_field_243.png"
+                  alt="Man field"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    Tech-focused travel backpack
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </div>
+            <div class="swiper-slide">
+              <article class="article-card-slider">
+                <img
+                  srcset="./images/slider_mob/displya@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/displya_243.png"
+                  alt="Man field"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    Desk accessories to keep you organized
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </div>
+            <div class="swiper-cube-shadow1"></div>
           </div>
         </div>
       </section>
