finished style section about

--- a/src/index.html
+++ b/src/index.html
@@ -182,14 +182,18 @@
           </a>
 
           <div class="card-box-line">
-            <p class="type-card-p type-card-p-revers">Tutorial</p>
-            <h4 class="card-title-artcl card-title-artcl-revers card-title-artcl-line">
+            <p class="type-card-p type-card-p__revers">Tutorial</p>
+            <h4
+              class="card-title-artcl card-title-artcl__revers card-title-artcl-line"
+            >
               How to make the perfect cup of coffee
             </h4>
-            <p class="date-p date-p-revers">November 24, 2021</p>
+            <p class="date-p date-p__revers">November 24, 2021</p>
           </div>
         </article>
-        <div class="swiper slider">
+
+        <!-- SLIDER -->
+        <div class="swiper slider test-list">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <article class="article-card-slider">
@@ -244,6 +248,63 @@
             </div>
             <div class="swiper-cube-shadow1"></div>
           </div>
+        </div>
+
+        <!-- NO SLIDER -->
+        <div class="no-slider">
+          <ul class="article-card-list">
+            <li class="article-card-item">
+              <article class="article-card-no-slider">
+                <img
+                  srcset="./images/slider_mob/pen@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/pen_243.png"
+                  alt="Camera"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    The best pen I've ever used
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </li>
+            <li class="article-card-item">
+              <article class="article-card-no-slider">
+                <img
+                  srcset="./images/slider_mob/man_field@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/man_field_243.png"
+                  alt="Man field"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    Tech-focused travel backpack
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </li>
+            <li class="article-card-item">
+              <article class="article-card-no-slider">
+                <img
+                  srcset="./images/slider_mob/displya@2_243.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/slider_mob/displya_243.png"
+                  alt="Man field"
+                />
+                <div class="card-box">
+                  <p class="type-card-p">Review</p>
+                  <h4 class="card-title-artcl-sl">
+                    Desk accessories to keep you organized
+                  </h4>
+                  <p class="date-p">November 24, 2021</p>
+                </div>
+              </article>
+            </li>
+          </ul>
         </div>
       </section>
 
