styles tablet for footer; fixed seze for logo: header, footer, hero - tablet

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="header-container">
         <div class="logo">
           <a href="./index.html">
-            <img src="./images/LogoCalm.svg" alt="logo" />
+            <img src="./images/LogoCalm.svg" alt="logo" class="logo-s" />
           </a>
         </div>
         <!-- BTN open -->
@@ -412,7 +412,7 @@
       <div class="footer-container">
         <div class="logo">
           <a href="./index.html">
-            <img src="./images/LogoCalm.svg" alt="logo" />
+            <img src="./images/LogoCalm.svg" alt="logo" class="logo-s" />
           </a>
         </div>
         <p class="footer-text">
