add styles desktop for about; fixed styles header(nav)

--- a/src/index.html
+++ b/src/index.html
@@ -165,46 +165,51 @@
           </ul>
         </div>
 
-        <ul class="galleryDrone hidden"></ul>
-        <article class="about-card-img about-card-img-line">
-          <a href="" class="linkDrone">
-            <img
-              srcset="./images/tablet_768/drone@2_374.png 2x"
-              src="./images/tablet_768/drone_374.png"
-              alt="Drone"
-            />
-          </a>
+        <ul class="about-card-list">
+          <li class="about-card-item">
+            <ul class="galleryDrone hidden"></ul>
+            <article class="about-card-img about-card-img-line">
+              <a href="" class="linkDrone">
+                <img
+                  srcset="./images/tablet_768/drone@2_374.png 2x"
+                  src="./images/tablet_768/drone_374.png"
+                  alt="Drone"
+                />
+              </a>
 
-          <div class="card-box-line">
-            <p class="type-card-p">Tech</p>
-            <h4 class="card-title-artcl card-title-artcl-line">
-              Drone photography on a space budget
-            </h4>
-            <p class="date-p">November 24, 2021</p>
-          </div>
-        </article>
+              <div class="card-box-line">
+                <p class="type-card-p">Tech</p>
+                <h4 class="card-title-artcl card-title-artcl-line">
+                  Drone photography on a space budget
+                </h4>
+                <p class="date-p">November 24, 2021</p>
+              </div>
+            </article>
+          </li>
+          <li class="about-card-item">
+            <ul class="galleryCoffee hidden"></ul>
+            <article class="about-card-img about-card-img-line revers">
+              <a href="" class="linkCoffee">
+                <img
+                  srcset="./images/tablet_768/coffe@2_374.png 2x"
+                  sizes="(max-width: 320px) 280px, 100vw"
+                  src="./images/tablet_768/coffe_374.png"
+                  alt="Coffee"
+                />
+              </a>
 
-        <ul class="galleryCoffee hidden"></ul>
-        <article class="about-card-img about-card-img-line revers">
-          <a href="" class="linkCoffee">
-            <img
-              srcset="./images/tablet_768/coffe@2_374.png 2x"
-              sizes="(max-width: 320px) 280px, 100vw"
-              src="./images/tablet_768/coffe_374.png"
-              alt="Coffee"
-            />
-          </a>
-
-          <div class="card-box-line">
-            <p class="type-card-p type-card-p__revers">Tutorial</p>
-            <h4
-              class="card-title-artcl card-title-artcl__revers card-title-artcl-line"
-            >
-              How to make the perfect cup of coffee
-            </h4>
-            <p class="date-p date-p__revers">November 24, 2021</p>
-          </div>
-        </article>
+              <div class="card-box-line">
+                <p class="type-card-p type-card-p__revers">Tutorial</p>
+                <h4
+                  class="card-title-artcl card-title-artcl__revers card-title-artcl-line"
+                >
+                  How to make the perfect cup of coffee
+                </h4>
+                <p class="date-p date-p__revers">November 24, 2021</p>
+              </div>
+            </article>
+          </li>
+        </ul>
 
         <!-- SLIDER -->
         <div class="swiper slider test-list">
@@ -281,7 +286,7 @@
                   src="./images/slider_mob/pen_243.png"
                   alt="Camera"
                 />
-                <div class="card-box">
+                <div class="card-box card-box__d">
                   <p class="type-card-p">Review</p>
                   <h4 class="card-title-artcl-sl">
                     The best pen I've ever used
@@ -298,7 +303,7 @@
                   src="./images/slider_mob/man_field_243.png"
                   alt="Man field"
                 />
-                <div class="card-box">
+                <div class="card-box card-box__d">
                   <p class="type-card-p">Review</p>
                   <h4 class="card-title-artcl-sl">
                     Tech-focused travel backpack
@@ -315,7 +320,7 @@
                   src="./images/slider_mob/displya_243.png"
                   alt="Man field"
                 />
-                <div class="card-box">
+                <div class="card-box card-box__d">
                   <p class="type-card-p">Review</p>
                   <h4 class="card-title-artcl-sl">
                     Desk accessories to keep you organized
