add styles desktop for section subscription

--- a/src/index.html
+++ b/src/index.html
@@ -335,33 +335,40 @@
 
       <!-- SUBSCRIPTION -->
       <section class="subscription" id="subscription">
-        <p class="subtitle-subscr"><b>Stay in the know.</b></p>
-        <p class="text-subscr">
-          Sign-up to my newsletter to get an update whenever I post a new
-          article. I try to be very mindful of not spamming my subscribers.
-        </p>
-        <form class="subscr-form">
-          <label class="data-field">
-            <input
-              type="text"
-              name="name"
-              class="data-input"
-              placeholder="Enter name"
-            />
-            <span class="data-text">Name</span>
-          </label>
+        <div class="subscr-block-text">
+          <p class="subtitle-subscr"><b>Stay in the know.</b></p>
+          <p class="text-subscr">
+            Sign-up to my newsletter to get an update whenever I post a new
+            article. I try to be very mindful of not spamming my subscribers.
+          </p>
+        </div>
 
-          <label class="data-field">
-            <input
-              type="email"
-              name="email"
-              class="data-input"
-              placeholder="Enter mail"
-            />
-            <span class="data-text">Email Address</span>
-          </label>
-        </form>
-        <button class="btn-subscr" type="button">Send</button>
+        <div class="subscr-block-form">
+          <form class="subscr-form">
+            <label class="data-field">
+              <input
+                type="text"
+                name="name"
+                class="data-input"
+                placeholder="Enter name"
+              />
+              <span class="data-text">Name</span>
+            </label>
+
+            <label class="data-field">
+              <input
+                type="email"
+                name="email"
+                class="data-input"
+                placeholder="Enter mail"
+              />
+              <span class="data-text">Email Address</span>
+            </label>
+
+            <!-- <button class="btn-subscr" type="button">Send</button> -->
+          </form>
+          <button class="btn-subscr" type="button">Send</button>
+        </div>
       </section>
 
       <!-- ARCHIVE -->
