end styles desktop for footer

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
 
         <nav class="header-list">
           <li class="header-item">
+            <a href="#info" class="header-link">Info</a>
+          </li>
+          <li class="header-item">
             <a href="#about" class="header-link">About</a>
           </li>
           <li class="header-item">
@@ -440,29 +443,34 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <footer class="footer" id="info">
       <div class="footer-container">
         <div class="logo">
           <a href="./index.html">
             <img src="./images/LogoCalm.svg" alt="logo" class="logo-s" />
           </a>
         </div>
-        <p class="footer-text">
-          A lifestyle blog about minimalism, technology, design & travel.
-          Powered by
-        </p>
-        <div class="nav-footer">
-          <ul class="nav-footer-list">
-            <li class="nav-footer-item">Start</li>
-            <li class="nav-footer-item">Archive</li>
-          </ul>
+        <div class="footer-box">
+          <div class="footer-block-text">
+            <p class="footer-text">
+              A lifestyle blog about minimalism, technology, design & travel.
+              Powered by a passion for simplicity and a love for exploring the
+              intersection of modern technology and elegant design.
+            </p>
+          </div>
+          <div class="nav-footer">
+            <ul class="nav-footer-list">
+              <li class="nav-footer-item">Start</li>
+              <li class="nav-footer-item">Archive</li>
+            </ul>
 
-          <ul class="info-footer-list">
-            <li class="info-footer-item">Instructions</li>
-            <li class="info-footer-item">Licenses</li>
-            <li class="info-footer-item">Style guide</li>
-            <li class="info-footer-item">Changelog</li>
-          </ul>
+            <ul class="info-footer-list">
+              <li class="info-footer-item">Instructions</li>
+              <li class="info-footer-item">Licenses</li>
+              <li class="info-footer-item">Style guide</li>
+              <li class="info-footer-item">Changelog</li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
