delete unneeded class in about section

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
         </ul>
 
         <!-- SLIDER -->
-        <div class="swiper slider test-list">
+        <div class="swiper slider">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <article class="article-card-slider">
